// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"import" option should keep original order: errors 1`] = `Array []`;

exports[`"import" option should keep original order: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??[ident]!./order-1.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??[ident]!./order-2.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??[ident]!./order-3.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??[ident]!./order-4.css\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and (min-width: 2000px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___, \\"screen\\");
// Module
exports.push([module.id, \\"div {\\\\n  width: 100%;\\\\n  height: 200px;\\\\n}\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should keep original order: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./import/order-1.css",
    ".order-1 {
  color: red;
}
",
    "",
  ],
  Array [
    "./import/order.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-2.css",
    ".order-2 {
  color: red;
}
",
    "",
  ],
  Array [
    "./import/order.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-1.css",
    ".order-1 {
  color: red;
}
",
    "",
  ],
  Array [
    "./import/order.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-2.css",
    ".order-2 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    "./import/order.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-3-1.css",
    ".order-3-1 {
  color: white;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-3.css",
    ".order-3 {
  color: red;
}
",
    "",
  ],
  Array [
    "./import/order.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-4-1.css",
    ".order-4-1 {
  color: red;
}
",
    "screen and (min-width: 1000px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-4-2-1.css",
    ".order-4-2-1 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-4-2-2.css",
    ".order-4-2-2 {
  color: red;
}
",
    "screen and (min-width: 2000px) and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-4-2.css",
    ".order-4-2 {
  color: red;
}
",
    "screen and (min-width: 2000px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/order-4.css",
    ".order-4 {
  color: red;
}
",
    "screen",
  ],
  Array [
    "./import/order.css",
    "div {
  width: 100%;
  height: 200px;
}
",
    "",
  ],
]
`;

exports[`"import" option should keep original order: warnings 1`] = `Array []`;

exports[`"import" option should work when "Function": errors 1`] = `Array []`;

exports[`"import" option should work when "Function": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??[ident]!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??[ident]!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??[ident]!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??[ident]!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_4___ = require(\\"-!../../../src/index.js??[ident]!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_5___ = require(\\"-!../../../src/index.js??[ident]!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_6___ = require(\\"-!../../../src/index.js??[ident]!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_7___ = require(\\"-!../../../src/index.js??[ident]!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??[ident]!./url.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??[ident]!./te'st.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___, \\"screen and (orientation:landscape)\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_6___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_7___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and (orientation:landscape);\\\\n@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);\\\\n@import url(test.css)screen and (orientation:landscape);\\\\n@import url(test.css)  screen and (orientation:landscape);\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n\\\\n@import url(./test.css);\\\\n\\\\n@import './te\\\\\\\\\\\\nst.css';\\\\n@import './te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css';\\\\n@import url('./te\\\\\\\\\\\\nst.css');\\\\n@import url('./te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css');\\\\n@import './test test.css';\\\\n@import url('./test test.css');\\\\n@import './test\\\\\\\\ test.css';\\\\n@import url('./test\\\\\\\\ test.css');\\\\n@import './test%20test.css';\\\\n@import url('./test%20test.css');\\\\n@import './\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import './t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import url(./test\\\\\\\\ test.css);\\\\n@import url(./t\\\\\\\\65st%20test.css);\\\\n@import url('./t\\\\\\\\65st%20test.css');\\\\n@import url(\\\\\\"./t\\\\\\\\65st%20test.css\\\\\\");\\\\n@import \\\\\\"./t\\\\\\\\65st%20test.css\\\\\\";\\\\n@import './t\\\\\\\\65st%20test.css';\\\\n@import url(                 test.css                      );\\\\n@import nourl(test.css);\\\\n/* TODO need fix */\\\\n/*@import '\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*';*/\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work when "Function": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./import/test-nested-media.css",
    "a {
  b: b;
}
",
    "screen and (orientation:landscape) and (min-width: 100px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-media.css",
    ".test {
  c: c;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-other.css",
    ".test {
  d: d;
}
",
    "(min-width: 100px)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(//example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/query.css?foo=1&bar=1",
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/relative.css",
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/top-relative.css",
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/node_modules/package/tilde.css",
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/alias.css",
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/url.css",
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "./import/import.css",
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and (orientation:landscape);
@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);
@import url(test.css)screen and (orientation:landscape);
@import url(test.css)  screen and (orientation:landscape);
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}

@import url(./test.css);

@import './te\\\\
st.css';
@import './te\\\\
\\\\
\\\\
st.css';
@import url('./te\\\\
st.css');
@import url('./te\\\\
\\\\
\\\\
st.css');
@import './test test.css';
@import url('./test test.css');
@import './test\\\\ test.css';
@import url('./test\\\\ test.css');
@import './test%20test.css';
@import url('./test%20test.css');
@import './\\\\74\\\\65\\\\73\\\\74.css';
@import url('./\\\\74\\\\65\\\\73\\\\74.css');
@import './t\\\\65\\\\73\\\\74.css';
@import url('./t\\\\65\\\\73\\\\74.css');
@import url(./test\\\\ test.css);
@import url(./t\\\\65st%20test.css);
@import url('./t\\\\65st%20test.css');
@import url(\\"./t\\\\65st%20test.css\\");
@import \\"./t\\\\65st%20test.css\\";
@import './t\\\\65st%20test.css';
@import url(                 test.css                      );
@import nourl(test.css);
/* TODO need fix */
/*@import '\\\\*/
/*\\\\*/
/*\\\\*/
/*';*/
",
    "",
  ],
]
`;

exports[`"import" option should work when "Function": warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(105:1) Unable to find uri in \\"@import nourl(test.css)\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in \\"@import ''\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in \\"@import \\"\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in \\"@import \\"   \\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in \\"@import \\"
\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in \\"@import \\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in \\"@import foo-bar\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`"import" option should work when not specified: errors 1`] = `Array []`;

exports[`"import" option should work when not specified: module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??[ident]!./test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??[ident]!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??[ident]!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??[ident]!package/test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_4___ = require(\\"-!../../../src/index.js??[ident]!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_5___ = require(\\"-!../../../src/index.js??[ident]!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_6___ = require(\\"-!../../../src/index.js??[ident]!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_7___ = require(\\"-!../../../src/index.js??[ident]!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??[ident]!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??[ident]!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_10___ = require(\\"-!../../../src/index.js??[ident]!./url.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_11___ = require(\\"-!../../../src/index.js??[ident]!./te'st.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_12___ = require(\\"-!../../../src/index.js??[ident]!./test test.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation: landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___, \\"screen and (orientation:landscape)\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_6___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_7___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_10___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n@import nourl(test.css);\\\\n/* TODO need fix */\\\\n/*@import '\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*';*/\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work when not specified: result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation: landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-nested-media.css",
    "a {
  b: b;
}
",
    "screen and (orientation:landscape) and (min-width: 100px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-media.css",
    ".test {
  c: c;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-other.css",
    ".test {
  d: d;
}
",
    "(min-width: 100px)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(//example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/node_modules/package/test.css",
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/query.css?foo=1&bar=1",
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/relative.css",
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/top-relative.css",
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/node_modules/package/tilde.css",
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/alias.css",
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/url.css",
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "./import/import.css",
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
@import nourl(test.css);
/* TODO need fix */
/*@import '\\\\*/
/*\\\\*/
/*\\\\*/
/*';*/
",
    "",
  ],
]
`;

exports[`"import" option should work when not specified: warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(105:1) Unable to find uri in \\"@import nourl(test.css)\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in \\"@import ''\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in \\"@import \\"\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in \\"@import \\"   \\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in \\"@import \\"
\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in \\"@import \\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in \\"@import foo-bar\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;

exports[`"import" option should work with a modules.auto equal "false" (default): errors 1`] = `Array []`;

exports[`"import" option should work with a modules.auto equal "false" (default): module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
// Module
exports.push([module.id, \\".relative {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work with a modules.auto equal "false" (default): result 1`] = `
Array [
  Array [
    "./import/relative.modules.css",
    ".relative {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"import" option should work with a modules.auto equal "false" (default): warnings 1`] = `Array []`;

exports[`"import" option should work with a modules.auto equal "true": errors 1`] = `Array []`;

exports[`"import" option should work with a modules.auto equal "true": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
// Module
exports.push([module.id, \\"._25Wh1AQHll_aR8RdPxDw2O {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
exports.locals = {
	\\"relative\\": \\"_25Wh1AQHll_aR8RdPxDw2O\\"
};
module.exports = exports;
"
`;

exports[`"import" option should work with a modules.auto equal "true": result 1`] = `
Array [
  Array [
    "./import/relative.modules.css",
    "._25Wh1AQHll_aR8RdPxDw2O {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"import" option should work with a modules.auto equal "true": warnings 1`] = `Array []`;

exports[`"import" option should work with a modules.auto returns "false": errors 1`] = `Array []`;

exports[`"import" option should work with a modules.auto returns "false": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
// Module
exports.push([module.id, \\".relative {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work with a modules.auto returns "false": result 1`] = `
Array [
  Array [
    "./import/relative.modules.css",
    ".relative {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"import" option should work with a modules.auto returns "false": warnings 1`] = `Array []`;

exports[`"import" option should work with a modules.auto returns "true": errors 1`] = `Array []`;

exports[`"import" option should work with a modules.auto returns "true": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
// Module
exports.push([module.id, \\"._25Wh1AQHll_aR8RdPxDw2O {\\\\n  color: red;\\\\n}\\\\n\\", \\"\\"]);
// Exports
exports.locals = {
	\\"relative\\": \\"_25Wh1AQHll_aR8RdPxDw2O\\"
};
module.exports = exports;
"
`;

exports[`"import" option should work with a modules.auto returns "true": result 1`] = `
Array [
  Array [
    "./import/relative.modules.css",
    "._25Wh1AQHll_aR8RdPxDw2O {
  color: red;
}
",
    "",
  ],
]
`;

exports[`"import" option should work with a modules.auto returns "true": warnings 1`] = `Array []`;

exports[`"import" option should work with a value equal to "false": errors 1`] = `Array []`;

exports[`"import" option should work with a value equal to "false": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url(test.css);\\\\n@import url('test.css');\\\\n@import url(\\\\\\"test.css\\\\\\");\\\\n@IMPORT url(test.css);\\\\n@import URL(test.css);\\\\n@import url(test.css );\\\\n@import url( test.css);\\\\n@import url( test.css );\\\\n@import url(\\\\n  test.css\\\\n);\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import \\\\\\"test.css\\\\\\";\\\\n@import 'test.css';\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import url(test.css) screen and (orientation:landscape);\\\\n@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);\\\\n@import url(test.css)screen and (orientation:landscape);\\\\n@import url(test.css)  screen and (orientation:landscape);\\\\n@import url(test-media.css) screen and (orientation:landscape);\\\\n@import url(test-other.css) (min-width: 100px);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css);\\\\n@import url(http://example.com/style.css#hash);\\\\n@import url(http://example.com/style.css?#hash);\\\\n@import url(http://example.com/style.css?foo=bar#hash);\\\\n@import url(http://example.com/other-style.css) screen and (orientation:landscape);\\\\n@import url(http://example.com/other-style.css) screen and (orientation:landscape);\\\\n@import url(\\\\\\"//example.com/style.css\\\\\\");\\\\n@import url(~package/test.css);\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n@import url('query.css?foo=1&bar=1');\\\\n@import url('other-query.css?foo=1&bar=1#hash');\\\\n@import url('other-query.css?foo=1&bar=1#hash') screen and (orientation:landscape);\\\\n@import url('https://fonts.googleapis.com/css?family=Roboto');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');\\\\n@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n@import url('./relative.css');\\\\n@import url('../import/top-relative.css');\\\\n@import url(~package/tilde.css);\\\\n@import url(~aliasesImport/alias.css);\\\\n@import url('./url.css');\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n\\\\n@import url(./test.css);\\\\n\\\\n@import './te\\\\\\\\\\\\nst.css';\\\\n@import './te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css';\\\\n@import url('./te\\\\\\\\\\\\nst.css');\\\\n@import url('./te\\\\\\\\\\\\n\\\\\\\\\\\\n\\\\\\\\\\\\nst.css');\\\\n\\\\n@import \\\\\\"./te'st.css\\\\\\";\\\\n@import url(\\\\\\"./te'st.css\\\\\\");\\\\n@import './te\\\\\\\\'st.css';\\\\n@import url('./te\\\\\\\\'st.css');\\\\n@import './test test.css';\\\\n@import url('./test test.css');\\\\n@import './test\\\\\\\\ test.css';\\\\n@import url('./test\\\\\\\\ test.css');\\\\n@import './test%20test.css';\\\\n@import url('./test%20test.css');\\\\n@import './\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./\\\\\\\\74\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import './t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css';\\\\n@import url('./t\\\\\\\\65\\\\\\\\73\\\\\\\\74.css');\\\\n@import url(./test\\\\\\\\ test.css);\\\\n@import url(./t\\\\\\\\65st%20test.css);\\\\n@import url('./t\\\\\\\\65st%20test.css');\\\\n@import url(\\\\\\"./t\\\\\\\\65st%20test.css\\\\\\");\\\\n@import \\\\\\"./t\\\\\\\\65st%20test.css\\\\\\";\\\\n@import './t\\\\\\\\65st%20test.css';\\\\n@import url(                 test.css                      );\\\\n@import nourl(test.css);\\\\n/* TODO need fix */\\\\n/*@import '\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*';*/\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work with a value equal to "false": result 1`] = `
Array [
  Array [
    "./import/import.css",
    "@import url(test.css);
@import url('test.css');
@import url(\\"test.css\\");
@IMPORT url(test.css);
@import URL(test.css);
@import url(test.css );
@import url( test.css);
@import url( test.css );
@import url(
  test.css
);
@import url();
@import url('');
@import url(\\"\\");
@import \\"test.css\\";
@import 'test.css';
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import url(test.css) screen and (orientation:landscape);
@import url(test.css) SCREEN AND (ORIENTATION: LANDSCAPE);
@import url(test.css)screen and (orientation:landscape);
@import url(test.css)  screen and (orientation:landscape);
@import url(test-media.css) screen and (orientation:landscape);
@import url(test-other.css) (min-width: 100px);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css);
@import url(http://example.com/style.css#hash);
@import url(http://example.com/style.css?#hash);
@import url(http://example.com/style.css?foo=bar#hash);
@import url(http://example.com/other-style.css) screen and (orientation:landscape);
@import url(http://example.com/other-style.css) screen and (orientation:landscape);
@import url(\\"//example.com/style.css\\");
@import url(~package/test.css);
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}
@import url('query.css?foo=1&bar=1');
@import url('other-query.css?foo=1&bar=1#hash');
@import url('other-query.css?foo=1&bar=1#hash') screen and (orientation:landscape);
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto');

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

@import url('./relative.css');
@import url('../import/top-relative.css');
@import url(~package/tilde.css);
@import url(~aliasesImport/alias.css);
@import url('./url.css');

.background {
  background: url(/webpack/public/path/img.png);
}

@import url(./test.css);

@import './te\\\\
st.css';
@import './te\\\\
\\\\
\\\\
st.css';
@import url('./te\\\\
st.css');
@import url('./te\\\\
\\\\
\\\\
st.css');

@import \\"./te'st.css\\";
@import url(\\"./te'st.css\\");
@import './te\\\\'st.css';
@import url('./te\\\\'st.css');
@import './test test.css';
@import url('./test test.css');
@import './test\\\\ test.css';
@import url('./test\\\\ test.css');
@import './test%20test.css';
@import url('./test%20test.css');
@import './\\\\74\\\\65\\\\73\\\\74.css';
@import url('./\\\\74\\\\65\\\\73\\\\74.css');
@import './t\\\\65\\\\73\\\\74.css';
@import url('./t\\\\65\\\\73\\\\74.css');
@import url(./test\\\\ test.css);
@import url(./t\\\\65st%20test.css);
@import url('./t\\\\65st%20test.css');
@import url(\\"./t\\\\65st%20test.css\\");
@import \\"./t\\\\65st%20test.css\\";
@import './t\\\\65st%20test.css';
@import url(                 test.css                      );
@import nourl(test.css);
/* TODO need fix */
/*@import '\\\\*/
/*\\\\*/
/*\\\\*/
/*';*/
",
    "",
  ],
]
`;

exports[`"import" option should work with a value equal to "false": warnings 1`] = `Array []`;

exports[`"import" option should work with a value equal to "true": errors 1`] = `Array []`;

exports[`"import" option should work with a value equal to "true": module 1`] = `
"// Imports
var ___CSS_LOADER_API_IMPORT___ = require(\\"../../../src/runtime/api.js\\");
var ___CSS_LOADER_AT_RULE_IMPORT_0___ = require(\\"-!../../../src/index.js??[ident]!./test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_1___ = require(\\"-!../../../src/index.js??[ident]!./test-media.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_2___ = require(\\"-!../../../src/index.js??[ident]!./test-other.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_3___ = require(\\"-!../../../src/index.js??[ident]!package/test.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_4___ = require(\\"-!../../../src/index.js??[ident]!./query.css?foo=1&bar=1\\");
var ___CSS_LOADER_AT_RULE_IMPORT_5___ = require(\\"-!../../../src/index.js??[ident]!./other-query.css?foo=1&bar=1#hash\\");
var ___CSS_LOADER_AT_RULE_IMPORT_6___ = require(\\"-!../../../src/index.js??[ident]!./relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_7___ = require(\\"-!../../../src/index.js??[ident]!../import/top-relative.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_8___ = require(\\"-!../../../src/index.js??[ident]!package/tilde.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_9___ = require(\\"-!../../../src/index.js??[ident]!aliasesImport/alias.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_10___ = require(\\"-!../../../src/index.js??[ident]!./url.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_11___ = require(\\"-!../../../src/index.js??[ident]!./te'st.css\\");
var ___CSS_LOADER_AT_RULE_IMPORT_12___ = require(\\"-!../../../src/index.js??[ident]!./test test.css\\");
var ___CSS_LOADER_GET_URL_IMPORT___ = require(\\"../../../src/runtime/getUrl.js\\");
var ___CSS_LOADER_URL_IMPORT_0___ = require(\\"./img.png\\");
exports = ___CSS_LOADER_API_IMPORT___(false);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation: landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_1___, \\"screen and (orientation:landscape)\\");
exports.i(___CSS_LOADER_AT_RULE_IMPORT_2___, \\"(min-width: 100px)\\");
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/style.css?foo=bar#hash);\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(http://example.com/other-style.css);\\", \\"screen and (orientation:landscape)\\"]);
exports.push([module.id, \\"@import url(//example.com/style.css);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_5___, \\"screen and (orientation:landscape)\\");
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Roboto);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);\\"]);
exports.push([module.id, \\"@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);\\"]);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_6___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_7___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_8___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_9___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_10___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_11___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_12___);
exports.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
// Module
exports.push([module.id, \\"@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import '';\\\\n@import \\\\\\"\\\\\\";\\\\n@import \\\\\\"   \\\\\\";\\\\n@import \\\\\\"\\\\n\\\\\\";\\\\n@import url();\\\\n@import url('');\\\\n@import url(\\\\\\"\\\\\\");\\\\n@import ;\\\\n@import foo-bar;\\\\n@import-normalize;\\\\n@import url('http://') :root {}\\\\n\\\\n.class {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.foo {\\\\n  @import 'path.css';\\\\n}\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL_REPLACEMENT_0___ + \\");\\\\n}\\\\n@import nourl(test.css);\\\\n/* TODO need fix */\\\\n/*@import '\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*\\\\\\\\*/\\\\n/*';*/\\\\n\\", \\"\\"]);
// Exports
module.exports = exports;
"
`;

exports[`"import" option should work with a value equal to "true": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation: landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-nested-media.css",
    "a {
  b: b;
}
",
    "screen and (orientation:landscape) and (min-width: 100px)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-media.css",
    ".test {
  c: c;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test-other.css",
    ".test {
  d: d;
}
",
    "(min-width: 100px)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/style.css?foo=bar#hash);",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(http://example.com/other-style.css);",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(//example.com/style.css);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/node_modules/package/test.css",
    ".test {
  d: d
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/query.css?foo=1&bar=1",
    ".query {
  e: e;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/other-query.css?foo=1&bar=1#hash",
    ".other-query {
  f: f;
}
",
    "screen and (orientation:landscape)",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Roboto);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC);",
  ],
  Array [
    "./import/import.css",
    "@import url(https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto);",
  ],
  Array [
    "../../src/index.js?[ident]!./import/relative.css",
    ".relative {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/top-relative.css",
    ".top-relative {
  color: black;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/node_modules/package/tilde.css",
    ".tilde {
  color: yellow;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/alias.css",
    ".alias {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/url.css",
    ".background-imported {
  background: url(/webpack/public/path/img.png);
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/te'st.css",
    ".strange {
  color: red;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test test.css",
    ".space {
  color: gray;
}
",
    "",
  ],
  Array [
    "../../src/index.js?[ident]!./import/test.css",
    ".test {
  a: a;
}
",
    "",
  ],
  Array [
    "./import/import.css",
    "@import url();
@import url('');
@import url(\\"\\");
@import '';
@import \\"\\";
@import \\"   \\";
@import \\"
\\";
@import url();
@import url('');
@import url(\\"\\");
@import ;
@import foo-bar;
@import-normalize;
@import url('http://') :root {}

.class {
  a: b c d;
}

.foo {
  @import 'path.css';
}

.background {
  background: url(/webpack/public/path/img.png);
}
@import nourl(test.css);
/* TODO need fix */
/*@import '\\\\*/
/*\\\\*/
/*\\\\*/
/*';*/
",
    "",
  ],
]
`;

exports[`"import" option should work with a value equal to "true": warnings 1`] = `
Array [
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(105:1) Unable to find uri in \\"@import nourl(test.css)\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(12:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(13:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(14:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(17:1) Unable to find uri in \\"@import ''\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(18:1) Unable to find uri in \\"@import \\"\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(19:1) Unable to find uri in \\"@import \\"   \\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(20:1) Unable to find uri in \\"@import \\"
\\"\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(22:1) Unable to find uri in \\"@import url()\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(23:1) Unable to find uri in \\"@import url('')\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(24:1) Unable to find uri in \\"@import url(\\"\\")\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(40:1) Unable to find uri in \\"@import \\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(41:1) Unable to find uri in \\"@import foo-bar\\"",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Warning

(43:1) It looks like you didn't end your @import statement correctly. Child nodes are attached to it.",
]
`;
